--- a/Ahmad_UI_stableTech/index3.html
+++ b/Ahmad_UI_stableTech/index3.html
@@ -44,7 +44,36 @@
              </div>
              
         </div>
-   
+
+        <div class="image3">
+            <img src="horse6.jpg" alt="horse6"  height="400" width="350">
+        </div>
+       
+         <nav class=" fact">
+            <h1>Secert</h1>
+            <p>
+                A good stable needs to be sturdy, spacious, comfortable, </br>
+                and safe for both you and your horses. Planning the perfect</br>
+                stable layout that is adequate for your horses and also makes</br>
+             your day-to-day tasks easier requires a lot of trial and error.</br>
+             catter hay or haylage in piles on the floor to mimic natural 'eating </br> 
+             on the move' behaviours. Scatter hard feed on top of roughage so it take</br> 
+             longer to eat. Hide carrots, swedes and apples in hay to encourage foraging.</br>
+             Hang suitable fruit and veg at different levels from stable beams.</br></br>
+             Horses, like people, have a hierarchy of needs. This hierarchy takes</br>
+              the form of a pyramid, with the most important need at the base of </br>
+             the pyramid and higher-level needs at the top. Higher-level needs </br>
+             cannot be fully addressed until the fundamental needs have been met.</br>
+
+             The equine hierarchy of needs has safety at its base. As a prey animal,</br>
+              safety is the horse’s most basic requirement and it’s the reason why </br>
+              horses have such highly developed reactions to threat and such strong </br>
+              affiliative needs – basically, there’s safety in numbers.Horses need to </br>
+               live in a social group that is settled and constant, where they can see, </br>
+                smell, hear and touch one another. Individual horses also need to have </br>
+                a pair bond for mutual protection.
+            </p>
+         </nav>
 
 
 </body>
